# handwritten-digits-classification

./: main.py  pyproject.toml
docs/: handwritten_digits.html  index.html
notebooks/: handwritten_digits.ipynb
